fix : update Navbar and styling for improved user interaction
- Enhanced Navbar component to toggle menu and search visibility with click events.
- Updated Menu and Nav components for better responsiveness and layout.
- Refined scrollbar styles in CSS for a more consistent appearance.
- Improved Hero component to handle loading state and display additional items.

--- a/src/custom.css
+++ b/src/custom.css
@@ -128,19 +128,3 @@
 .bg-two-hover:hover {
   background-color: var(--col-two);
 }
-
-/* scroll bar color */
-::-webkit-scrollbar {
-  width: 10px;
-}
-::-webkit-scrollbar-thumb {
-  background-color: var(--col-six);
-}
-
-::-webkit-scrollbar-track {
-  background-color: var(--col-one);
-}
-
-* {
-  scroll-behavior: smooth;
-}
