--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-@media screen and (max-width: 768px) {
-  ::-webkit-scrollbar {
-    width: 0px;
-  }
-  ::-webkit-scrollbar-thumb {
-    background-color: rgb(0, 136, 255);
-  }
+/* scroll bar color */
+::-webkit-scrollbar {
+  width: 2px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--col-seven);
+}
 
-  ::-webkit-scrollbar-track {
-    background-color: rgb(31, 41, 55);
-  }
+::-webkit-scrollbar-track {
+  background-color: var(--col-black);
+}
+
+::-webkit-scrollbar-button {
+  margin: 2px 0px;
+}
+
+* {
+  scroll-behavior: smooth;
+}
+
+/* Optional: Style for all bullets */
+.swiper-pagination-bullet {
+  background-color: var(--col-white) !important;
+  opacity: 1 !important;
+}
+
+/* Style for the active bullet */
+.swiper-pagination-bullet-active {
+  background-color: var(--col-seven) !important;
+  opacity: 1 !important;
 }
